# VKR-3DGame

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_instructions.txt  imgui.ini  intall_instruction.txt
assets/shaders/: basic.frag  basic.vert  shadow.frag  shadow.vert
src/: main.cpp
src/core/: Application.cpp  Application.h  Constants.h  HouseSerializer.h  Input.cpp  Input.h  ModelSerializer.h  PhysicsSystem.h  Window.cpp  Window.h
src/game/: Game.cpp  Game.h  GameObject.h  ODMGear.h  Player.h
src/graphics/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Primitives.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderSources.h  ShadowMap.cpp  ShadowMap.h  Skysphere.cpp  Skysphere.h
